Fri Mar  7 12:37:04 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Hash_T.cpp:
          Initialize pointer member explicitly to zero to resolve
          Coverity error

Fri Mar  7 12:02:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Reactor_Token_T.cpp:
          Use copy constructor instead of assignment operator

        * ace/Timer_Hash_T.h:
        * ace/Timer_List_T.h:
        * ace/WFMO_Reactor.h:
          Doxygen improvements

        * ace/WFMO_Reactor.cpp:
        * ace/Timer_Heap_T.cpp:
          Layout changes

Fri Mar  7 11:56:10 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Queue_T.h:
        * ace/Timer_Queue_T.inl:
        * ace/Timer_Queue_T.cpp:
          Moved the expire() method from the inline to the cpp, it is
          virtual so can't be inlined. Further, the expire() method
          had an optimization that it checked is_empty() before
          callig the real expire that grabs the lock. This is causing
          a potential data race because the timer hash overrides is_empty
          and uses a member variable to determine whether the queue
          is empty or not, this is now accessed without having the
          timer queue locked. Therefor the optimization was removed,
          we directly call into the real expire that first grabs its
          lock

Fri Mar  7 10:22:01 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/inspxe-cl.sup:
          Starter suppression file for Intel C++ Inspector-XE

Wed Mar  5 14:45:12 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-icc-common.h:
          Intel C++ does support pragma once

Fri Feb 28 07:59:51 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * debian/debian.changelog:
        * debian/debian.control:
        * docs/Download.html:
        * docs/bczar/bczar.html: